[package]
name = "reif_macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

anyhow = "1.0"
regex-syntax = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
regex = "1.11.1"
